fixes: - evobar issue on small screens; - navigation: collection title cropped too small, added CSS calc; - navigation: menu items alignment;

--- a/style.less
+++ b/style.less
@@ -77,7 +77,7 @@ body {
 	.navbar-brand {
 		padding: 0;
 		> h3 {
-			margin-top: 13px;
+			margin-top: 14px;
 			a {
 				font-family: 'Josefin Sans', sans-serif;
 				font-weight: 300;
@@ -91,9 +91,11 @@ body {
 		.nav {
 			li {
 				padding: 0;
-				padding-bottom: 3px;
+				// padding-bottom: 3px;
 			}
 			li a {
+				padding-top: 17px;
+				padding-bottom: 17px;
 				transition: .1s opacity linear;
 			}
 			li.menu-button a {
@@ -124,7 +126,7 @@ body {
 		text-transform: uppercase;
 		font-weight: 400;
 		font-family: 'Josefin Sans', sans-serif;
-		font-size: 12px;
+		font-size: 13px;
 		letter-spacing: .18em;
 	}
 }
@@ -136,7 +138,8 @@ body {
 }
 
 body.loggedin .navbar.main-header-navigation.affix { top: 27px }
-body.anonymous .navbar.main-header-navigation.affix { top: 0 }
+// SEEMS TO INTERFERE WITH THE DEFAULT SITENAV BEHAVIOR
+// body.anonymous .navbar.main-header-navigation.affix { top: 0 }
 
 @media (max-width: 1024px) {
 	body.loggedin, body.anonymous {
@@ -150,13 +153,16 @@ body.anonymous .navbar.main-header-navigation.affix { top: 0 }
 }
 
 @media only screen and (max-width: 768px) {
-	.navbar.main-header-navigation .navbar-brand > h3 a {
-		display: inline-block;
-		font-size: 15px;
-		max-width: 280px;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
+	.navbar.main-header-navigation .navbar-brand {
+		width: ~"calc(100% - 60px)";
+		> h3 a {
+			display: inline-block;
+			font-size: 15px;
+			width: 100%;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+		}
 	}
 }
 @media only screen and (max-width: 414px) {
